--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -167,7 +167,7 @@ body {
 	}
 	
 	select.card-expiry-year {
-		width: 80px;
+		width: 60px;
 	}
 	
 	h3 {
@@ -254,4 +254,17 @@ body {
 
 .footer {
 	color: rgba(0, 0, 0, 0.4);
+	
+	.powered-by {
+		padding: 10px 0 0;
+	}
+	
+	.powered-by-stripe {
+		float: right;
+		
+		img {
+			width: 119px;
+			height: 26px;
+		}
+	}
 }
