--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -34,8 +34,9 @@
                 <span class="span7">
                 <p>Made with sundried tomatoes and various cheeses by <a href="https://twitter.com/juliansimioni">@juliansimioni</a>, <a href="https://twitter.com/samuelclay">@samuelclay</a>, <a href="https://twitter.com/tommoor">@tommoor</a> and <a href="https://twitter.com/elylerner">@elylerner</a> for the Stripe <a href="https://stripe.com/blog/hack-to-the-future">Hack to the Future</a> hackathon.</p>
                 </span>
-                <span class="span5">
-                    
+                <span class="span5 powered-by">
+                    <a href="http://stripe.com" class="powered-by-stripe"><img src="/mediafiles/img/stripe.png" alt="Powered by Stripe"/></a>
+                    <a href="/" class="powered-by-dp btn-success btn-small btn">Create a Donation Party</a>
                 </span>
             </div>
         </div>
