Adding donated flag.

--- a/donationparty/templates/payment_info.xhtml
+++ b/donationparty/templates/payment_info.xhtml
@@ -56,8 +56,8 @@
         </span>
         <span class="span2">
             <div class="form-row">
-                <label>CVC</label>
-                <input type="text" size="4" autocomplete="off" class="card-cvc" />
+                <label for="card-cvc">CVC</label>
+                <input type="text" size="4" autocomplete="off" class="card-cvc" id="card-cvc" />
             </div>
         </span>
         </div>
