Fixing donations list.

--- a/donationparty/templates/round_running.xhtml
+++ b/donationparty/templates/round_running.xhtml
@@ -24,7 +24,7 @@
     </div>
     <div class="span7">
         <ol class="donations">
-            {% render_donations round.donations.all %}
+            {% render_donations round %}
         </ol>
     </div>
 </div>
