Added: styling of donated box, retro default gravatars

--- a/donationparty/templates/payment_info.xhtml
+++ b/donationparty/templates/payment_info.xhtml
@@ -1,7 +1,8 @@
 {% if donated %}
     <h3>Your Donation</h3>
-
-    Good job!
+    
+    <p>Amazing, you've taken the plunge and donated to a good cause - lets hope you win!</p>
+    
 {% else %}
 <form action="/charge" method="post" id="payment-form">
     <h3>Your Donation</h3>
