Styled empty state when not yet donated

--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -207,6 +207,11 @@ body {
 		line-height: 1.2;
 	}
 	
+	li.nearly.empty {
+		margin-top: 0px;
+		padding-top: 120px;
+	}
+	
 	li.DP-donation {
 		position: relative;
 		border-top: 1px solid #fff;
