--- a/donationparty/templates/donations.xhtml
+++ b/donationparty/templates/donations.xhtml
@@ -11,7 +11,7 @@
     </li>
 {% endfor %}
 
-{% if donations and donated %}
+{% if donations and not donated %}
     <li class="nearly empty">
         <p>Donate now to put money to a good cause and have a chance to win!</p>
     </li>
