Removed url from tweet message

--- a/donationparty/templates/round_running.xhtml
+++ b/donationparty/templates/round_running.xhtml
@@ -13,7 +13,7 @@
         <input type="text" value="{{ request.build_absolute_uri }}" name="share"/>
         <span class="buttons">
             <div class="fb-send"></div>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-count="none" data-text="Party time! Excellent! {{ request.build_absolute_uri }}">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-count="none" data-text="Party time! Excellent!">Tweet</a>
         </span>
     </div>
 </div>
