--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -130,7 +130,7 @@ body {
 	}
 }
 
-.payment-info {
+#payment-form {
 	padding: 20px;
 	margin: 0;
 	
@@ -208,8 +208,7 @@ body {
 	}
 	
 	li.nearly.empty {
-		margin-top: 0px;
-		padding-top: 120px;
+		margin-top: 10px;
 	}
 	
 	li.DP-donation {
