--- a/donationparty/templates/donations.xhtml
+++ b/donationparty/templates/donations.xhtml
@@ -17,14 +17,16 @@
     </li>
 {% endfor %}
 
-{% if donations and not donated %}
-    <li class="nearly empty">
-        <p>Donate now to put money to a good cause and have a chance to win!</p>
-    </li>
-{% endif %}
+{% if not round.closed %}
+    {% if donations and not donated %}
+        <li class="nearly empty">
+            <p>Donate now to put money to a good cause and have a chance to win!</p>
+        </li>
+    {% endif %}
 
-{% if not donations %}
-    <li class="empty">
-        <p>Awesome! Now donate a random amount to start the party, then invite your friends...</p>
-    </li>
+    {% if not donations %}
+        <li class="empty">
+            <p>Awesome! Now donate a random amount to start the party, then invite your friends...</p>
+        </li>
+    {% endif %}
 {% endif %}
