--- a/donationparty/templates/round_closed.xhtml
+++ b/donationparty/templates/round_closed.xhtml
@@ -1,21 +1,27 @@
 {% extends "base.xhtml" %}
+{% load donations %}
 
 {% block content %}
 
-<div class="jumbotron">
-	<h1>${{amount_donated}} Donated to {{charity name}}!</h1>
-	<p class="lead">{{winner}} won with a random donation of ${{winner_amount}} and will receive something frickin' awesome from Amazon in the next few days.</p>
+<div class="boxed lead running">
+    <img src="/mediafiles/img/{{ round.charity }}.png" />
+    <h2>${{amount_donated}} Donated to {{ round.charity_name }}!</h2>
+    <p class="lead">Give yourselves a huge pat on the back. WINNER won with a random donation of <strong>$AMOUNT</strong> and will receive something frickin' awesome in the mail soon!</p>
 </div>
 
-<ul class="players">
-    <li class="player">
-        <img src="{{gravatar}}" width="100px" height="100px" />
-        <p class="name">{{name}} <span class="amount">${{amount}}</span></p>
-    </li>
-</ul>
-
-<div class="start-party">
-    <a href="/" class="btn btn-large btn-success">Create a Party!</a>
-    <p>Start your own party to collect donations for charity and have the chance to win something niiice.</p>
+<div class="row-fluid">
+    <div class="span5 boxed finish-info">
+        <p>Start your own party to collect donations for charity and have the chance to win something niiice.</p>
+        
+        <div class="create">
+            <a href="/" class="btn btn-large btn-success">Create a Party!</a>
+        </div>
+    </div>
+    <div class="span7">
+        <ol class="donations">
+            {% render_donations round %}
+        </ol>
+    </div>
 </div>
+
 {% endblock %}
