Added handling of failed partys

--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -260,6 +260,14 @@ body {
 	}
 }
 
+.donations.failed {
+	li.DP-donation {
+		.DP-donation-amount {
+			color: #b94a48;
+		}
+	}
+}
+
 .footer {
 	color: rgba(0, 0, 0, 0.4);
 	
