Highlighting winning users

--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -146,10 +146,6 @@ body {
 		}
 	}
 	
-	input.card-cvc {
-		width: 30px;
-	}
-	
 	select.card-expiry-month {
 		width: 120px;
 		margin-right: 10px;
@@ -196,6 +192,10 @@ body {
 	
 	input[type=text] {
 		width:96%;
+	}
+	
+	input.card-cvc {
+		width: 30px;
 	}
 }
 
@@ -250,6 +250,10 @@ body {
 			line-height: 1.6;
 			margin: 0;
 		}
+	}
+	
+	li.DP-donation.highlighted {
+		background: #f7eec4;
 	}
 	
 	li.DP-donation:first-child {
