Adding coutndown timer.

--- a/donationparty/templates/base.xhtml
+++ b/donationparty/templates/base.xhtml
@@ -19,6 +19,7 @@
         DP.Round = {
             'url': "{{ round.url }}"
         };
+        DP.secondsLeft = {{ round.seconds_left }};
         DP.PUSHER_KEY = "{{ settings.PUSHER_KEY }}";
         </script>
     </head>
