--- a/donationparty/templates/round_running.xhtml
+++ b/donationparty/templates/round_running.xhtml
@@ -15,6 +15,7 @@
             <div class="fb-send"></div>
             <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-count="none" data-text="Party time! Excellent!">Tweet</a>
         </span>
+        <div class="timer"></div>
     </div>
 </div>
 
