--- a/donationparty/media/css/app.css
+++ b/donationparty/media/css/app.css
@@ -36,5 +36,6 @@ body{padding-top:20px;padding-bottom:40px;background:#fdfbf1;}
 .donations li.DP-donation:first-child{border-top:0;}
 .donations li.DP-donation:last-child{border-bottom:0;}
 .donations.failed li.DP-donation .DP-donation-amount{color:#b94a48;}
+.timer{font-size:30px;font-weight:bold;text-align:right;color:rgba(0, 0, 0, 0.75);}.timer span{color:rgba(0, 0, 0, 0.4);font-size:11px;display:block;}
 .footer{color:rgba(0, 0, 0, 0.4);}.footer .powered-by{padding:10px 0 0;}
 .footer .powered-by-stripe{float:right;}.footer .powered-by-stripe img{width:119px;height:26px;}
