--- a/donationparty/media/less/app.less
+++ b/donationparty/media/less/app.less
@@ -273,9 +273,22 @@ body {
 	}
 }
 
-.footer {
-	color: rgba(0, 0, 0, 0.4);
+.timer {
+	font-size: 30px;
+	font-weight: bold;
+	text-align: right;
 	
+	color: rgba(0, 0, 0, 0.75);
+	
+	span {
+		color: rgba(0, 0, 0, 0.4);
+		font-size: 11px;
+		display: block;
+	}
+}
+
+.footer {
+	color: rgba(0, 0, 0, 0.4);	
 	.powered-by {
 		padding: 10px 0 0;
 	}
