--- a/app/assets/stylesheets/application.css.less.erb
+++ b/app/assets/stylesheets/application.css.less.erb
@@ -158,7 +158,7 @@ body {
 	}
 
 	.btn.active {
-		background: #5bb75b url('/mediafiles/img/loading.gif') no-repeat center center;
+    background: #5bb75b url(<%= asset_path 'loading.png' %>) no-repeat center center;
 		color: transparent;
 		text-shadow: none;
 	}
@@ -205,7 +205,7 @@ body {
 	list-style: none;
 
 	li.empty {
-		background: url('/mediafiles/img/arrow-nw.png') no-repeat left top;
+    background: url(<%= asset_path 'arrow-nw.png' %>) no-repeat left top;
 		padding-top: 130px;
 		font-size: 21px;
 		text-align: center;
