Move setup javascript to rounds display template

--- a/app/views/rounds/display.html.erb
+++ b/app/views/rounds/display.html.erb
@@ -1,4 +1,15 @@
 <%= stylesheet_link_tag "rounds" %>
+<%= javascript_tag do %>
+  var DP = {};
+  DP.Round = {
+    'url': "{{ round.url }}",
+    'closed': {{ round.closed|yesno:"true,false" }}
+  };
+  <% if @round.seconds_left > 0 %>
+    DP.Round.secondsLeft = '<%= @round.seconds_left %>';
+  <% end %>
+  DP.PUSHER_KEY = '<%= ENV['PUSHER_KEY'] %>';
+<% end %>
 <div class="boxed lead running">
   <img src="<%= asset_path @round.charity + '.png' %>" />
     <h2><%= @round.charity %></h2>
