Don't include all javascript on all pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "home" %>
 <div class="jumbotron">
 	<h1>Donation Party!</h1>
 	<p class="lead">Invite friends to donate a randomly selected amount (up to $10) to charity and one lucky winner will receive something awesome* from Amazon!</p>
