--- a/app/views/rounds/display.html.erb
+++ b/app/views/rounds/display.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag "rounds" %>
+<%= javascript_include_tag "rounds" %>
 <%= javascript_tag do %>
   DP.Round = {
     'url': "<%= j @round.url %>",
