--- a/app/views/rounds/display.html.erb
+++ b/app/views/rounds/display.html.erb
@@ -6,7 +6,7 @@
     'closed': <%= @round.closed %>
   };
   <% if @round.seconds_left > 0 %>
-    DP.Round.secondsLeft = '<%= @round.seconds_left %>';
+    DP.Round.secondsLeft = '<%= @round.seconds_left.round %>';
   <% end %>
   DP.PUSHER_KEY = '<%= Rails.application.config.pusher_key %>';
 <% end %>
