--- a/app/views/rounds/display.html.erb
+++ b/app/views/rounds/display.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag "rounds" %>
+<%= javascript_include_tag 'https://d3dy5gmtp8yhk7.cloudfront.net/1.12/pusher.min.js' %>
 <%= javascript_include_tag "rounds" %>
 <%= javascript_tag do %>
   DP.Round = {
