--- a/app/assets/stylesheets/application.css.less.erb
+++ b/app/assets/stylesheets/application.css.less.erb
@@ -158,7 +158,7 @@ body {
 	}
 
 	.btn.active {
-    background: #5bb75b url(<%= asset_path 'loading.png' %>) no-repeat center center;
+    background: #5bb75b url(<%= asset_path 'loading.gif' %>) no-repeat center center;
 		color: transparent;
 		text-shadow: none;
 	}
