Properly render partials after donation

--- a/app/views/rounds/_payment_info.html.erb
+++ b/app/views/rounds/_payment_info.html.erb
@@ -1,5 +1,5 @@
 <h3>Your Donation</h3>
-<% if @donate %>
+<% if @donated %>
 
     <p>Amazing, you've taken the plunge and donated to a good cause - lets hope you win!</p>
 
