--- a/app/views/rounds/closed.html.erb
+++ b/app/views/rounds/closed.html.erb
@@ -26,7 +26,7 @@
     </div>
     <div class="span7">
         <ol class="donations <% if @round.failed %>failed<% end %>">
-            <% render 'donations' %>
+            <%= render 'donations' %>
         </ol>
     </div>
 </div>
