--- a/app/views/rounds/closed.html.erb
+++ b/app/views/rounds/closed.html.erb
@@ -7,8 +7,8 @@
 <% else %>
 <div class="boxed lead running">
     <img src="<%= asset_path @round.charity.image_name %>" />
-    <h2>$<%= @round.total_raised.round(2) %> Donated to <%= @round.charity.name %>!</h2>
-    <p class="lead">Give yourselves a huge pat on the back. <%= @round.winner.name %> won with a random donation of <strong>$<%= @round.winner.amount.round(2) %></strong> and will receive something frickin' awesome in the mail soon!</p>
+    <h2><%= number_to_currency(@round.total_raised) %> Donated to <%= @round.charity.name %>!</h2>
+    <p class="lead">Give yourselves a huge pat on the back. <%= @round.winner.name %> won with a random donation of <strong><%= number_to_currency(@round.winner.amount) %></strong> and will receive something frickin' awesome in the mail soon!</p>
 </div>
 <% end %>
 
