--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag "home" %>
 <div class="jumbotron">
 	<h1>Donation Party!</h1>
-	<p class="lead">Invite friends to donate a randomly selected amount (up to $10) to charity and one lucky winner will receive something awesome* from Amazon!</p>
+  <p class="lead">Invite friends to donate a randomly selected amount (up to <%= number_to_currency(Rails.application.config.max_donation, precision: 0) %>) to charity and one lucky winner will receive something awesome* from Amazon!</p>
 </div>
 
 </div>
