Remove static amount from donate button

--- a/app/views/rounds/_payment_info.html.erb
+++ b/app/views/rounds/_payment_info.html.erb
@@ -59,7 +59,7 @@
         </span>
     </div>
     <div class="donate">
-        <button type="submit" class="submit-button btn btn-success btn-large">Donate $1 - $10</button>
+        <button type="submit" class="submit-button btn btn-success btn-large">Donate</button>
     </div>
   <% end %>
 <% end %>
