Serve credit card logo images locall

--- a/app/views/rounds/_payment_info.html.erb
+++ b/app/views/rounds/_payment_info.html.erb
@@ -17,10 +17,10 @@
     </div>
     <div class="form-row">
         <div class="creditcards">
-            <img src="https://manage.stripe.com/img/credit_cards/visa@2x.png">
-            <img src="https://manage.stripe.com/img/credit_cards/mastercard@2x.png">
-            <img src="https://manage.stripe.com/img/credit_cards/amex@2x.png">
-            <img src="https://manage.stripe.com/img/credit_cards/discover@2x.png">
+					<%= image_tag('visa@2x.png') %>
+					<%= image_tag('mastercard@2x.png') %>
+					<%= image_tag('amex@2x.png') %>
+					<%= image_tag('visa@2x.png') %>
         </div>
         <label for="card-number">Card number</label>
         <input type="text" size="20" autocomplete="off" class="card-number" id="card-number" />
