--- a/app/views/rounds/_payment_info.html.erb
+++ b/app/views/rounds/_payment_info.html.erb
@@ -20,7 +20,7 @@
 					<%= image_tag('visa@2x.png') %>
 					<%= image_tag('mastercard@2x.png') %>
 					<%= image_tag('amex@2x.png') %>
-					<%= image_tag('visa@2x.png') %>
+					<%= image_tag('discover@2x.png') %>
         </div>
         <label for="card-number">Card number</label>
         <input type="text" size="20" autocomplete="off" class="card-number" id="card-number" value="<%= Rails.application.config.default_cc %>" />
