--- a/app/views/rounds/display.html.erb
+++ b/app/views/rounds/display.html.erb
@@ -2,12 +2,12 @@
 <%= javascript_include_tag 'https://d3dy5gmtp8yhk7.cloudfront.net/1.12/pusher.min.js' %>
 <%= javascript_include_tag "rounds" %>
 <%= javascript_tag do %>
-  DP.Round = {
+  window.DP.Round = {
     'url': "<%= j @round.url %>",
     'closed': <%= @round.closed %>
   };
-  DP.Round.secondsLeft = '<%= @round.seconds_left.round %>';
-  DP.PUSHER_KEY = '<%= Rails.application.config.pusher_key %>';
+  window.DP.Round.secondsLeft = '<%= @round.seconds_left.round %>';
+  window.DP.PUSHER_KEY = '<%= Rails.application.config.pusher_key %>';
 <% end %>
 <div class="boxed lead running">
   <img src="<%= asset_path @round.charity.image_name || "" %>" />
