--- a/app/views/admin/charities/_form.html.erb
+++ b/app/views/admin/charities/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@charity) do |f| %>
+<%= form_for([:admin, @charity]) do |f| %>
   <% if @charity.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@charity.errors.count, "error") %> prohibited this charity from being saved:</h2>
