--- a/app/views/admin/charities/show.html.erb
+++ b/app/views/admin/charities/show.html.erb
@@ -10,5 +10,5 @@
   <%= @charity.image_name %>
 </p>
 
-<%= link_to 'Edit', edit_charity_path(@charity) %> |
-<%= link_to 'Back', charities_path %>
+<%= link_to 'Edit', edit_admin_charity_path(@charity) %> |
+<%= link_to 'Back', admin_charities_path %>
