--- a/app/views/admin/rounds/_form.html.erb
+++ b/app/views/admin/rounds/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@round) do |f| %>
+<%= form_for([:admin, @round]) do |f| %>
   <% if @round.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@round.errors.count, "error") %> prohibited this round from being saved:</h2>
