--- a/app/views/admin/rounds/show.html.erb
+++ b/app/views/admin/rounds/show.html.erb
@@ -46,5 +46,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_round_path(@round) %> |
-<%= link_to 'Back', rounds_path %>
+<%= link_to 'Edit', edit_admin_round_path(@round) %> |
+<%= link_to 'Back', admin_rounds_path %>
