Redirect to round_new instead of round url

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 <div class="highlight">
   <div class="container-narrow">
 
-  <form action="<%= '/round/' + @round.url %>" method="POST">
+  <form action="<%= rounds_path %>" method="POST">
     <%= render 'charities' %>
 
     <div class="start-party">
