--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 <div class="highlight">
   <div class="container-narrow">
 
-  <form action="<%= rounds_path %>" method="POST">
+  <form action="<%= round_index_path %>" method="POST">
     <%= render 'charities' %>
 
     <div class="start-party">
